--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "2.0.18",
     "@material-tailwind/react": "2.1.2",
+    "@types/lodash": "^4.17.7",
     "next": "13.4.0",
     "react": "18",
     "react-dom": "18"
   },
   "devDependencies": {
-    "@types/node": "20",
+    "@types/node": "^20.14.11",
     "@types/react": "18",
     "@types/react-dom": "18",
     "autoprefixer": "10",
